<resources>
    <string name="app_name">Cadastro de produtos</string>

    <string name="gerenciar_produtos">Gerenciar produtos</string>
    <string name="listar_produtos">Listar produtos</string>
    <string name="adicionar_produtos">Adicionar produtos</string>
    <string name="produtos">Produtos</string>

    <string name="gerenciar_marcas">Gerenciar marcas</string>
    <string name="listar_marcas">Listar marcas</string>
    <string name="adicionar_marcas">Adicionar marcas</string>
    <string name="marcas">Marcas</string>
    <string name="marca">Marca</string>

    <string name="gerenciar_categorias">Gerenciar categorias</string>
    <string name="listar_categorias">Listar categorias</string>
    <string name="adicionar_categorias">Adicionar categorias</string>
    <string name="categorias">Categorias</string>
    <string name="categoria">Categoria</string>

    <string name="gerenciar_cores">Gerenciar cores</string>
    <string name="listar_cores">Listar cores</string>
    <string name="adicionar_cores">Adicionar cores</string>
    <string name="cores">Cores</string>
    <string name="cor">Cor</string>

    <string name="descricao">Descrição</string>

    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="listar">Listar</string>
    <string name="adicionar">Adicionar</string>
    <string name="registro_adicionado_com_sucesso">Registro adicionado com sucesso!</string>
    <string name="informe_campo_descricao">Por favor, informe o campo descrição.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao_exclusao_registro">Você realmente deseja excluir o registro?</string>
    <string name="registro_atualizado_com_sucesso">Registro atualizado com sucesso!</string>
    <string name="registro_excluido_com_sucesso">Registro excluído com sucesso!</string>

</resources>